--- a/app/src/main/res/navigation/login_nav_graph.xml
+++ b/app/src/main/res/navigation/login_nav_graph.xml
@@ -21,7 +21,11 @@
         android:id="@+id/registerFragment"
         android:name="org.bedu.project20.RegisterFragment"
         android:label="fragment_register"
-        tools:layout="@layout/fragment_register" />
+        tools:layout="@layout/fragment_register" >
+        <action
+            android:id="@+id/action_registerFragment_to_inicioFragment"
+            app:destination="@id/inicioFragment" />
+    </fragment>
     <activity
         android:id="@+id/mainActivity"
         android:name="org.bedu.project20.MainActivity"
