--- a/app/src/main/res/layout/description_recycler.xml
+++ b/app/src/main/res/layout/description_recycler.xml
@@ -189,7 +189,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline27"
-        app:layout_constraintVertical_bias="0.533" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/descripcion"
@@ -199,9 +199,10 @@
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline30"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/guideline19"
         app:layout_constraintTop_toTopOf="@+id/guideline28"
-        app:layout_constraintVertical_bias="0.184" />
+        app:layout_constraintVertical_bias="0.128" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline30"
