--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+<!--CHUSMEAR SCROLLVIEW CUANDO ARME LAYOUTS DE PERFIL Y CARRITO -->
+    <ScrollView
+        android:layout_width="411dp"
+        android:layout_height="670dp"
 
-
+        android:layout_marginEnd="1dp"
+        app:layout_constraintBottom_toTopOf="@+id/btmMenu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragmentContainerMenu"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="410dp"
-            android:layout_height="655dp"
+            android:layout_height="650dp"
             app:defaultNavHost="true"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toTopOf="@+id/btmMenu"
@@ -23,19 +31,18 @@
             app:layout_constraintVertical_bias="0.2"
             app:navGraph="@navigation/page_nav_graph"
             tools:listitem="@layout/list_product_recycler" />
+    </ScrollView>
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/btmMenu"
+            style="@style/Widget.Design.BottomNavigationView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:labelVisibilityMode="selected"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            app:menu="@menu/bottom_nav_bar" />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/btmMenu"
-        style="@style/Widget.Design.BottomNavigationView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:labelVisibilityMode="selected"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:menu="@menu/bottom_nav_bar"
-
-        />
 </androidx.constraintlayout.widget.ConstraintLayout>
